docs-archive/apache-airflow-providers-amazon/5.0.0/_sources/_api/airflow/providers/amazon/aws/utils/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.utils`
============================================

.. py:module:: airflow.providers.amazon.aws.utils


Submodules
----------
.. toctree::
   :titlesonly:
   :maxdepth: 1

   connection_wrapper/index.rst
   eks_get_token/index.rst
   emailer/index.rst
   rds/index.rst
   redshift/index.rst


Package Contents
----------------


Functions
~~~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.utils.trim_none_values
   airflow.providers.amazon.aws.utils.datetime_to_epoch
   airflow.providers.amazon.aws.utils.datetime_to_epoch_ms
   airflow.providers.amazon.aws.utils.datetime_to_epoch_us
   airflow.providers.amazon.aws.utils.get_airflow_version



.. py:function:: trim_none_values(obj)


.. py:function:: datetime_to_epoch(date_time)

   Convert a datetime object to an epoch integer (seconds).


.. py:function:: datetime_to_epoch_ms(date_time)

   Convert a datetime object to an epoch integer (milliseconds).


.. py:function:: datetime_to_epoch_us(date_time)

   Convert a datetime object to an epoch integer (microseconds).


.. py:function:: get_airflow_version()


